tests/snapshots/03_basic_preview_00_ProjectionExec.snap
---
source: integration/tests/integration_tests.rs
expression: preview
---
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+
