tests/snapshots/03_basic_preview_01_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+
