tests/snapshots/04_basic_compact_preview_01_ProjectionExec.snap
---
source: integration/tests/integration_tests.rs
expression: preview
---
+----------+
| Int64(1) |
|==========|
| 1        |
+----------+
