tests/snapshots/05_basic_all_options_01_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+----------+
| Int64(1) |
|==========|
| 1        |
+----------+
