tests/snapshots/06_object_store_all_options_00_DataSourceExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-----------+-------------+----------------------+
| n_nationkey | n_name    | n_regionkey | n_comment            |
|=============+===========+=============+======================|
| 0           | ALGERIA   | 0           | haggle. carefully    |
|             |           |             | final deposits       |
|             |           |             | detect slyly agai    |
|-------------+-----------+-------------+----------------------|
| 1           | ARGENTINA | 1           | al foxes promise     |
|             |           |             | slyly according to   |
|             |           |             | the regular...       |
|-------------+-----------+-------------+----------------------|
| 2           | BRAZIL    | 1           | y alongside of the   |
|             |           |             | pending deposits.    |
|             |           |             | carefully special... |
|-------------+-----------+-------------+----------------------|
| 3           | CANADA    | 1           | eas hang ironic,     |
|             |           |             | silent packages.     |
|             |           |             | slyly regular...     |
|-------------+-----------+-------------+----------------------|
| 4           | EGYPT     | 4           | y above the          |
|             |           |             | carefully unusual    |
|             |           |             | theodolites. fina... |
+-------------+-----------+-------------+----------------------+
