tests/snapshots/07_scrabble_all_options_00_DataSourceExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+---------+---------+
| column1 | column2 |
|=========+=========|
| A       | 1       |
|---------+---------|
| B       | 3       |
|---------+---------|
| C       | 3       |
|---------+---------|
| D       | 2       |
|---------+---------|
| E       | 1       |
+---------+---------+
