tests/snapshots/07_scrabble_all_options_01_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+--------+--------+----------------------------+
| letter | points | CAST(s.letter AS Utf8View) |
|========+========+============================|
| A      | 1      | A                          |
|--------+--------+----------------------------|
| B      | 3      | B                          |
|--------+--------+----------------------------|
| C      | 3      | C                          |
|--------+--------+----------------------------|
| D      | 2      | D                          |
|--------+--------+----------------------------|
| E      | 1      | E                          |
+--------+--------+----------------------------+
